Correcciones en ciudad.tpl.html y en el footer de PaginaDeInicio.tpl.html

--- a/punajut-web/src/main/webapp/src/modules/usuario/PaginaDeInicio.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/usuario/PaginaDeInicio.tpl.html
@@ -174,12 +174,13 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>GoTravel</strong>
                     </h4>
-                    <p>Universidad de los andes <br>Colombia, Bogota</p>
+                    <p>Universidad de los Andes <br>Bogotá, Colombia</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (300) 659-5279</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:jp.gonzalez14@uniandes.edu.co">jp.gonzalez14@uniandes.edu.co</a>
                         </li>
                     </ul>
+                    <p>Juan Pablo González, Julio Poveda, Ricardo Ángel, María Arévalo, Rafael Cárdenas, Sofía Hernández</p>
                     <br>
                     <ul class="list-inline">
                         <li>
@@ -187,9 +188,6 @@
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
