--- a/punajut-web/src/main/webapp/src/modules/ciudad/ciudad.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/ciudad/ciudad.tpl.html
@@ -79,6 +79,12 @@
         <h1>Párrafo de prueba</h1>
     </div>
 
+    <div ng-show="ctrl.showEventosMode">
+        <button type="button" id="create-evento" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="count=count+1"><span class="glyphicon glyphicon-plus"></span> Crear evento</button>
+        <button id="refresh-evento" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.fetchRecords()"><span class="glyphicon glyphicon-refresh"></span> Refrescar</button>
+        <p>{{count}}</p>
+    </div>
+
     <div id="eventosCiudad" ng-show="ctrl.showEventosMode">
         <div class="instrucciones">
             <button type="button" class="btn btn-primary">Evento deportivo</button>
