--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -44,15 +44,10 @@
         <script src="src/modules/visitaCiudad/visitaCiudad.mod.js" type="text/javascript"></script>
         <script src="src/modules/visitaCiudad/visitaCiudad.mock.js" type="text/javascript"></script>
 
-        <script src="src/modules/eventoManejo/itinerarioYmapa.mod.js" type="text/javascript"></script>
-        <script src="src/modules/eventoManejo/itinerarioYmapa.ctrl.js" type="text/javascript"></script>
-        <!-- Falta itinerarioYmapa.svc.js -->
-        <!-- Falta itinerarioYmapa.mock.js -->
-
         <script src="src/modules/ciudad/ciudad.mod.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.svc.js" type="text/javascript"></script>
-        <!--    Falta     <script src="src/modules/ciudad/ciudad.mock.js" type="text/javascript"></script>-->
+        <script src="src/modules/ciudad/ciudad.mock.js" type="text/javascript"></script>
 
         <!-- Estilos de cada modulo -->
         <link rel="stylesheet" href="resources/css/ciudadStyle.css">
