--- a/punajut-web/src/main/webapp/src/modules/usuario/PaginaDeInicio.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/usuario/PaginaDeInicio.tpl.html
@@ -159,14 +159,14 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d15907.831170224283!2d-74.0740319966012!3d4.601582276558952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8e3f99bcb666072b%3A0xa1257e7013f3eb50!2suniversidad+de+los+andes!3m2!1d4.6015857!2d-74.0652745!5e0!3m2!1ses!2sco!4v1461609343982"></iframe>
         <br />
         <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+            <a href="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d15907.831170224283!2d-74.0740319966012!3d4.601582276558952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8e3f99bcb666072b%3A0xa1257e7013f3eb50!2suniversidad+de+los+andes!3m2!1d4.6015857!2d-74.0652745!5e0!3m2!1ses!2sco!4v1461609343982"></a>
         </small>
         </iframe>
     </section>
-
+    
     <!-- Footer -->
     <footer>
         <div class="container">
