Correcciones en CiudadResource

--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -158,6 +158,7 @@
                                 <li><a ui-sref="itinerario">Itinerarios</a></li>
                                 <li><a ui-sref="ciudad">Prueba ciudad</a></li>
                                 <li><a ui-sref="visitaCiudad">Prueba visita ciudad</a></li>
+                                <li><a ui-sref="evento">Prueba evento</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
