--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -49,6 +49,11 @@
         <script src="src/modules/ciudad/ciudad.svc.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.mock.js" type="text/javascript"></script>
 
+        <script src="src/modules/evento/evento.mod.js" type="text/javascript"></script>
+        <script src="src/modules/evento/evento.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/evento/evento.svc.js" type="text/javascript"></script>
+        <script src="src/modules/evento/evento.mock.js" type="text/javascript"></script>
+
         <!-- Estilos de cada modulo -->
         <link rel="stylesheet" href="resources/css/ciudadStyle.css">
         <link rel="stylesheet" href="resources/css/visitaCiudad.css">
