--- a/punajut-web/src/main/webapp/src/modules/ciudad/ciudad.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/ciudad/ciudad.tpl.html
@@ -99,21 +99,21 @@
                     <div class="panel panel-primary">
                         <div class="panel-heading">SANTA FE VS MILLONARIOS</div>
                         <div class="panel-body"><img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Tuchin_Balon_Futbol_Colombiano.jpg" class="img-responsive" style="width:100%" alt="Balón de la Liga Águila"></div>
-                        <div class="panel-footer">Clásico capitalino correspondiente a la fecha 9 de la Liga Aguila. <b>Sábado 9 de Abril 5:45 pm.</b></div>
+                        <div class="panel-footer">Clásico capitalino correspondiente a la fecha 9 de la Liga Aguila. <strong>Sábado 9 de Abril 5:45 pm.</strong></div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="panel panel-success">
                         <div class="panel-heading">CONCIERTO COLDPLAY</div>
                         <div class="panel-body"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Coldplay-snl.jpg" class="img-responsive" style="width:100%" alt="Integrantes de la banda Coldplay"></div>
-                        <div class="panel-footer">El concierto de una de las bandas británicas más populares se realizará en el estadio El Campín. <b>Miércoles 13 de Abril 8:00 pm.</b></div>
+                        <div class="panel-footer">El concierto de una de las bandas británicas más populares se realizará en el estadio El Campín. <strong>Miércoles 13 de Abril 8:00 pm.</strong></div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="panel panel-info">
                         <div class="panel-heading">GoTravel restaurant</div>
                         <div class="panel-body"><img src="https://static.pexels.com/photos/7900/food-pasta-tomato-theme-workspaces.jpg" class="img-responsive" style="width:100%" alt="Pasta"></div>
-                        <div class="panel-footer">Inauguración de restaurante italiano en Ciudad Salitre. <b>Lunes 18 de Abril 9:00 pm.</b></div>
+                        <div class="panel-footer">Inauguración de restaurante italiano en Ciudad Salitre. <strong>Lunes 18 de Abril 9:00 pm.</strong></div>
                     </div>
                 </div>
             </div>
@@ -125,21 +125,21 @@
                     <div class="panel panel-warning">
                         <div class="panel-heading">NUEVA OBRA DE TEATRO</div>
                         <div class="panel-body"><img src="https://pixabay.com/static/uploads/photo/2016/01/19/15/48/luggage-1149289_960_720.jpg" class="img-responsive" style="width:100%" alt="Foto de una maleta"></div>
-                        <div class="panel-footer">Se estrena la esperada obra GoTravel. <b>Sábado 23 de Abril 12:00 pm.</b> </div>
+                        <div class="panel-footer">Se estrena la esperada obra GoTravel. <strong>Sábado 23 de Abril 12:00 pm.</strong> </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="panel panel-primary">
                         <div class="panel-heading">CICLOVIA NOCTURNA</div>
                         <div class="panel-body"><img src="https://adventurebeforeavarice.files.wordpress.com/2013/11/la-septima1.jpg" class="img-responsive" style="width:100%" alt="Ciclistas en Bogotá"></div>
-                        <div class="panel-footer">Aproveche el próximo jueves por la noche para dar un paseo por Bogotá. <b>Jueves 28 de Abril 6:00 pm.</b> </div>
+                        <div class="panel-footer">Aproveche el próximo jueves por la noche para dar un paseo por Bogotá. <strong>Jueves 28 de Abril 6:00 pm.</strong> </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="panel panel-primary">
                         <div class="panel-heading">TORNEO WTA</div>
                         <div class="panel-body"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Pereira_WMQ13-007.jpg" class="img-responsive" style="width:100%" alt="Teliana Pereira, jugadora de tenis"></div>
-                        <div class="panel-footer">Bogotá será sede de un torneo WTA, en el que figuran jugadoras como Teliana Pereira. <b>Del 11 al 17 de Abril.</b></div>
+                        <div class="panel-footer">Bogotá será sede de un torneo WTA, en el que figuran jugadoras como Teliana Pereira. <strong>Del 11 al 17 de Abril.</strong></div>
                     </div>
                 </div>
             </div>
