--- a/punajut-web/src/main/webapp/src/modules/ciudad/ciudad.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/ciudad/ciudad.tpl.html
@@ -14,7 +14,7 @@
             <div ng-repeat="record in records">
                 <div class="col-md-4 col-sm-6 col-lg-3 well">
                     <div class="caption" >
-                        <p><strong>Nombre:</strong> <span id="{{$index}}-nombre">{{record.nombre}}</span></p>
+                        <p><strong>Nombre:</strong> <span id="{{$index}}-name">{{record.name}}</span></p>
                         <p><strong>Descripcion:</strong> <span id="{{$index}}-descripcion">{{record.descripcion}}</span></p>
                         <p><strong>Clima:</strong> <span id="{{$index}}-clima">{{record.clima}}</span></p>
                         <p><strong>Longitud:</strong> <span id="{{$index}}-longitud">{{record.longitud}}</span></p>
@@ -40,10 +40,10 @@
             </alert>
             <fieldset>
                 <input id="id" class="form-control" type="hidden" ng-model="currentRecord.id"/>
-                <div class="form-group col-md-12" ng-class="{'has-success': form.nombre.$valid && form.nombre.$dirty, 'has-error': form.nombre.$invalid && (form.nombre.$dirty || form.$submitted)}" >
-                    <label for="nombre" class="col-md-2 control-label">Nombre</label>
+                <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                    <label for="name" class="col-md-2 control-label">Nombre</label>
                     <div class="col-md-10">
-                        <input id="nombre" name="nombre" class="form-control" type="text" ng-model="currentRecord.nombre" required />
+                        <input id="name" name="name" class="form-control" type="text" ng-model="currentRecord.name" required />
                     </div>
                 </div>
                 <div class="form-group col-md-12" ng-class="{'has-success': form.descripcion.$valid && form.descripcion.$dirty, 'has-error': form.descripcion.$invalid && (form.descripcion.$dirty || form.$submitted)}" >
