Correcciones en ciudad.tpl.html y evento.tpl.html. Se agregaron las siguientes clases: ciudad.eventos.ctrl.js, ciudad.eventos.html y eventoModal.tpl.html

--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -48,6 +48,8 @@
         <script src="src/modules/ciudad/ciudad.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.svc.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.mock.js" type="text/javascript"></script>
+        <script src="src/modules/ciudad/ciudad.eventos.ctrl.js" type="text/javascript"></script>
+
 
         <script src="src/modules/evento/evento.mod.js" type="text/javascript"></script>
         <script src="src/modules/evento/evento.ctrl.js" type="text/javascript"></script>
