--- a/punajut-web/src/main/webapp/src/modules/ciudad/ciudad.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/ciudad/ciudad.tpl.html
@@ -155,13 +155,13 @@
 
     <div id="childs" ng-show="ctrl.editMode" class="col-md-6">
         <ul class="nav nav-tabs">
-            <li role="presentation" ng-class="{active: tab === 'eventos'}">
+            <li ng-show="currentRecord.id" role="presentation" ng-class="{active: tab === 'eventos'}">
                 <a href ng-click="ctrl.changeTab('eventos')">Eventos</a>
             </li>
         </ul>
-        <!-- Aquí incluye el template del modulo de eventos e indica el controlador correspondiente -->
-        <div ng-show="tab === 'eventos'">
-            <div ng-controller="eventoCtrl as ctrl" ng-include="'src/modules/evento/evento.tpl.html'"></div>
+        <!-- Aquí se necesita el template de la selección de los eventos a la ciudad -->
+        <div ng-include="'src/modules/ciudad/ciudad.eventos.html'">
         </div>
+
     </div>
 </div>
