Correcciones en evento.tpl.html. Se agregaron las siguientes clases: ciudadModal.tpl.html, evento.ciudades.ctrl.js y evento.ciudades.html

--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -55,6 +55,7 @@
         <script src="src/modules/evento/evento.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/evento/evento.svc.js" type="text/javascript"></script>
         <script src="src/modules/evento/evento.mock.js" type="text/javascript"></script>
+        <script src="src/modules/evento/evento.ciudades.ctrl.js" type="text/javascript"></script>
 
         <!-- Estilos de cada modulo -->
         <link rel="stylesheet" href="resources/css/ciudadStyle.css">
