--- a/punajut-web/src/main/webapp/src/modules/evento/evento.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/evento/evento.tpl.html
@@ -102,4 +102,15 @@
             <button id="cancel-evento" type="button" form="evento-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode" ng-click="form.$setPristine(); ctrl.fetchRecords();"><span class="glyphicon glyphicon-remove"></span> Cancelar</button>
         </form>
     </div>
+    <div id="childs" ng-show="ctrl.editMode" class="col-md-10">
+        <ul class="nav nav-tabs">
+            <li ng-show="currentRecord.id" role="presentation" ng-class="{active: tab === 'ciudades'}">
+                <a href ng-click="ctrl.changeTab('ciudades')">Ciudades</a>
+            </li>
+        </ul>
+        <div ng-show="currentRecord.id">
+            <div ng-include="'src/modules/evento/evento.ciudades.html'">
+            </div>
+        </div>
+    </div>
 </div>
